--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                                 <button type="button" class="btn btn-dark"> ♾️ICPEX</button>
                             </a>
 
-                            <a target="_blank" class="piti-link-text-none" href="#DexScreener">
+                            <a target="_blank" class="piti-link-text-none" href="https://dexscreener.com/icp/ga5r7-4yaaa-aaaag-qkcjq-cai">
                                 <button type="button" class="btn btn-dark">👀 DexScreener</button>
                             </a>
                         </div>
